# Detector-simulation

./: CMakeLists.txt  EJ-276_data.ods  scin_det.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhotoSD.hh  PhysicsList.hh  RunAction.hh  ScinSD.hh  Source.hh  parameters.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhotoSD.cc  PhysicsList.cc  RunAction.cc  ScinSD.cc  Source.cc  parameters.cc
